tests/rosetta/out/Java/chernicks-carmichael-numbers.error
javac error: exit status 1
/tmp/TestMochiToJavachernicks-carmichael-numbers1373781846/001/ChernicksCarmichaelNumbers.java:57: error: bad operand types for binary operator '*'
            int prod = ((Number)((Number)a.get(i)).doubleValue() * m).doubleValue() + carry;
                                                                 ^
  first type:  Number
  second type: int
/tmp/TestMochiToJavachernicks-carmichael-numbers1373781846/001/ChernicksCarmichaelNumbers.java:72: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(a.get(i))).doubleValue();
                                           ^
Note: /tmp/TestMochiToJavachernicks-carmichael-numbers1373781846/001/ChernicksCarmichaelNumbers.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
